# agent-job-coach

./: .env  .env.example  .gitignore  PROJECT_NOTE.md  README.md  log.md
.github/: copilot-instructions.md
apps/api/: pyproject.toml
apps/api/src/: main.py
apps/api/src/api/: routes_chat.py  routes_chat_stream.py  routes_health.py  routes_ingest.py  routes_retrieve.py  routes_skills.py  routes_sources.py  routes_upload.py
apps/api/src/core/: deps.py  output_coercion.py  redis_client.py  settings.py
apps/api/src/graph/: job_coach_graph.py  redis_session_store.py
apps/api/src/ingest/: filesystem_sync.py  note_qa_parser.py  pipeline.py
apps/api/src/llm/: zhipu.py
apps/api/src/rag/: chunking.py  embeddings.py  retrieve.py  service.py  store.py
apps/api/src/skills/: interview_qa.py  resume_note_interview.py
apps/api/src/tests/: conftest.py  test_chat_graph_smoke.py  test_citations_selection.py  test_filesystem_sync.py  test_graph_coercion.py  test_note_qa_parser.py  test_output_coercion.py  test_redis_session_store.py  test_resume_note_interview_turn.py  test_routes_chat_stream_cache_compaction.py  test_routes_retrieve_no_shadow.py  test_tools_registry.py  test_upload_ingest_txt.py
apps/api/src/tools/: mcp_client.py  registry.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AppShell.tsx  Nav.tsx  Sidebar.tsx
apps/web/src/lib/: backend.ts
data/chroma/: chroma.sqlite3
scripts/: delete_source.py  dev-api.ps1  dev-web.ps1  sync_filesystem_sources.py
(+9 files in other folders)
