[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "langgraph>=0.2.0",
    "pydantic>=2.12.5",
    "pypdf>=6.6.2",
    "pytest>=9.0.2",
    "redis>=5.2.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.9",
    "uvicorn>=0.40.0",
]
